fix: add more contrast to input fields

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -112,5 +112,5 @@ footer {
 }
 
 .text-input-background-color {
-  background-color: var(--footer-background-color);
+  background-color: var(--text-input-background-color);
 }
