--- a/theme.css
+++ b/theme.css
@@ -15,6 +15,7 @@
   --header-text-color: #ffffff;
   --footer-text-color: #ffffff;
   --text-highlight-color: #f4b942;
+  --text-input-background-color: #333333;
 
   /* HERO */
   --hero-text-color: #000000;
@@ -47,6 +48,7 @@
     --header-text-color: #ffffff;
     --footer-text-color: #ffffff;
     --text-highlight-color: #f4b942;
+    --text-input-background-color: #12122a;
 
     /* HERO */
     --hero-text-color: #ffffff;
